tests/compiletests/ui/spirv-attr/invalid-storage-class.stderr
error: `Input` storage class is the default and should not be explicitly specified
  --> $DIR/invalid-storage-class.rs:9:13
   |
LL |     #[spirv(input)] _: (),
   |             ^^^^^

error: `Output` storage class is the default and should not be explicitly specified
  --> $DIR/invalid-storage-class.rs:10:13
   |
LL |     #[spirv(output)] _: (),
   |             ^^^^^^

error: `Private` storage class can not be used as part of an entry's interface
  --> $DIR/invalid-storage-class.rs:11:13
   |
LL |     #[spirv(private)] _: (),
   |             ^^^^^^^

error: `Function` storage class can not be used as part of an entry's interface
  --> $DIR/invalid-storage-class.rs:12:13
   |
LL |     #[spirv(function)] _: (),
   |             ^^^^^^^^

error: `Generic` storage class can not be used as part of an entry's interface
  --> $DIR/invalid-storage-class.rs:13:13
   |
LL |     #[spirv(generic)] _: (),
   |             ^^^^^^^

error: aborting due to 5 previous errors

